# CppToyChessEngine

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
CppToyChessEngine/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoard.hpp  ChessBoard.сpp  ChessBoardHelpers.cpp  ChessBoardHelpers.hpp  ChessGame.cpp  ChessGame.h  ChessGame.hpp  ChessPlayer.cpp  ChessPlayer.hpp  ChessTests.cpp  Coordinate.cpp  Coordinate.h  Coordinate.hpp  Move.cpp  Move.hpp  PieceType.cpp  PieceType.h  PieceType.hpp  main.cpp
CppToyChessEngine.xcodeproj/: project.pbxproj
CppToyChessEngine.xcodeproj/project.xcworkspace/xcuserdata/pprokop.xcuserdatad/: UserInterfaceState.xcuserstate
CppToyChessEngine.xcodeproj/xcuserdata/pprokop.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CppToyChessEngine.xcodeproj/xcuserdata/pprokop.xcuserdatad/xcschemes/: xcschememanagement.plist
CppToyChessEngine/MinMaxEval/: MinMaxEval.cpp  MinMaxEval.hpp
CppToyChessEngineTests/: CMakeLists.txt
